[gd_scene load_steps=2 format=3 uid="uid://456b0ktms2yp"]

[ext_resource type="Script" uid="uid://d4ejf4rv5jk2n" path="res://scripts/hud.gd" id="1_qpvh6"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_qpvh6")

[node name="DebugStack" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="DebugLabel" type="Label" parent="DebugStack"]
layout_mode = 2

[node name="WindWidget" type="Control" parent="DebugStack"]
layout_mode = 2

[node name="WindLabel" type="Label" parent="DebugStack/WindWidget"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "TEST"
